js for showing and hiding test case form

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
                 <div id="testcases" class="section">
                     <h1>Test Cases</h1>
+
+                    <button class="btn" onclick="showTestForm()">Add New Test Case</button>
+
                     <div id="test-form">
                         <h3>Add Test Case</h3>
                     <div class="form-group">
