js for saving test cases

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         <textarea id="testExpected"></textarea>
                     </div>
                     <button class="btn" onclick="saveTest()">Save Test Case</button>
+                    <button class="btn" onclick="clearTestForm()">Clear Form</button>
                     <button class="btn btn-danger" onclick="hideTestForm()">Cancel</button>
 
                     <div id="testList" class="grid" style="margin-top: 20px;"></div>
