rendering test cases (working)

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                     <button class="btn" onclick="saveTest()">Save Test Case</button>
                     <button class="btn" onclick="clearTestForm()">Clear Form</button>
                     <button class="btn btn-danger" onclick="hideTestForm()">Cancel</button>
-
-                    <div id="testList" class="grid" style="margin-top: 20px;"></div>
                 </div>
+                <div id="testList" class="grid" style="margin-top: 20px;"></div>
+                
             </div>
 
             <!-- Bug Reports Section -->
@@ -110,6 +110,6 @@
             </div>
         </div>
 
-        <script src="script.js" async defer></script>
+        <script src="script.js" ></script>
     </body>
 </html>
